--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "@types/node-fetch": "^2.6.2",
         "axios": "^1.3.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "nodemon": "^2.0.20"
     },
